# zk-cp-proof

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  common-build.yml
client/: Cargo.toml  build.rs
client/src/grpc/: mod.rs
material/: Cargo.toml  build.rs
material/config/: default.toml
material/src/: lib.rs  main.rs
material/src/application/: handler.rs
material/src/conf/: mod.rs  settings.rs  tracing.rs
material/src/domain/: material.rs
material/src/grpc/: mod.rs  server.rs  zkp_material.rs
material/src/infrastructure/: generator.rs  mem_storage.rs
protocol/: Cargo.toml  Dockerfile  client_material.json  material.json  server_material.json
protocol/data/: client_material.json  server_material.json
protocol/src/: main.rs
protocol/src/protocol/: cp.rs  mod.rs
protos/: zk_auth.proto  zk_material.proto
prover/: Cargo.toml  build.rs
prover/src/: main.rs
prover/src/grpc/: zkp_auth.rs  zkp_material.rs
server/: Cargo.toml  build.rs
server/src/grpc/: zkp_auth.rs
verifier/: Cargo.toml  Dockerfile  build.rs
verifier/config/: default.toml  users.json
verifier/src/: lib.rs  main.rs
verifier/src/application/: handler.rs
verifier/src/conf/: mod.rs  settings.rs
verifier/src/domain/: verifier.rs
verifier/src/grpc/: mod.rs  server.rs  zkp_auth.rs  zkp_material.rs
verifier/src/infrastructure/: file_params.rs  generator.rs  grpc_registry.rs  mem_storage.rs  mod.rs
