[workspace]
resolver = "2"
members = [
    "client", "material",
    "server",
]

[workspace.dependencies]
blake3 = "1.5.1"
glob = "0.3.1"
num-bigint = "0.4.5"
num-traits = "0.2.19"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
serde_json = "1.0.117"
tonic = "0.11.0"
tonic-build = "0.11"


