[workspace]
resolver = "2"
members = [
    "prover",
    "verifier",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.8"
clap = "4.5.6"
config = "0.14.0"
glob = "0.3.1"
num-bigint = "0.4.5"
num-traits = "0.2.19"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tonic = { version = "0.11", features = ["tls"] }
tonic-build = "0.11"
tonic-health = { version = "0.11"}
tower = { version = "0.4", features = ["retry", "timeout"]}
tower-http = { version = "0.4", features = ["trace"]}
tokio = { version = "1.5.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
typed-builder = "0.18.1"



