[package]
name = "zk-material"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
num-bigint = { workspace = true }
num-primes = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }


