[package]
name = "zk-cp-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true, features = ["rand", "serde"] }
num-traits = { workspace = true }
num-primes = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
typed-builder = { workspace = true }
uuid = { workspace = true }

