[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }
zk-cp-protocol = { path = "../protocol" }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }


