[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }


