[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
dashmap = "5.5.3"
num-bigint = { workspace = true, features = ["rand"] }
num-traits = { workspace = true }
num-primes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }
zk-cp-protocol = { path = "../protocol" }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
mockall = "0.12.1"


